--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityDetail"></activity>
+        <activity android:name=".ActivityDetail" />
         <activity android:name=".ActivityLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +20,10 @@
         <activity android:name=".ActivityList" />
         <activity android:name=".ActivityArmada" />
         <activity android:name=".ActivityMain" />
+        <activity android:name=".ActivityProfil" />
+        <activity android:name=".ActivityTentang" />
+        <activity android:name=".ActivityKontak" />
+        <activity android:name=".ActivityUlasan" />
     </application>
 
 </manifest>
