--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'me.biubiubiu.justifytext:library:1.1'
-    implementation 'com.google.firebase:firebase-analytics:17.2.3'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.0'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.firebaseui:firebase-ui-database:2.0.0'
     testImplementation 'junit:junit:4.13'
