--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityPemesanan"/>
+        <activity android:name=".ActivityPembayaran"/>
+        <activity android:name=".ActivityPemesanan" />
         <activity android:name=".ActivitySignup" />
         <activity android:name=".ActivitySignin">
             <intent-filter>
@@ -20,7 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityDetail" />
         <activity android:name=".ActivityArmada" />
         <activity android:name=".ActivityMain" />
         <activity android:name=".ActivityProfil" />
